calcAST/calc.output
Terminals unused in grammar

    T_QUIT


Rules useless in parser due to conflicts

    0 $accept: calculation $end


Grammar

    0 $accept: calculation $end

    1 calculation: line
    2            | calculation line

    3 line: eol
    4     | expression eol

    5 expression: number
    6           | expression T_PLUS expression
    7           | expression T_MINUS expression
    8           | expression T_MULTIPLY expression
    9           | expression T_DIVIDE expression
   10           | T_LEFT expression T_RIGHT

   11 number: T_INT
   12       | T_FLOAT

   13 eol: T_NEWLINE
   14    | $end


Terminals, with rules where they appear

    $end (0) 0 14
    error (256)
    T_INT <ival> (258) 11
    T_FLOAT <fval> (259) 12
    T_PLUS (260) 6
    T_MINUS (261) 7
    T_MULTIPLY (262) 8
    T_DIVIDE (263) 9
    T_LEFT (264) 10
    T_RIGHT (265) 10
    T_NEWLINE (266) 13
    T_QUIT (267)


Nonterminals, with rules where they appear

    $accept (13)
        on left: 0
    calculation <node> (14)
        on left: 1 2
        on right: 0 2
    line <node> (15)
        on left: 3 4
        on right: 1 2
    expression <node> (16)
        on left: 5 6 7 8 9 10
        on right: 4 6 7 8 9 10
    number <node> (17)
        on left: 11 12
        on right: 5
    eol (18)
        on left: 13 14
        on right: 3 4


State 0

    0 $accept: • calculation $end

    $end       shift, and go to state 1
    T_INT      shift, and go to state 2
    T_FLOAT    shift, and go to state 3
    T_LEFT     shift, and go to state 4
    T_NEWLINE  shift, and go to state 5

    calculation  go to state 6
    line         go to state 7
    expression   go to state 8
    number       go to state 9
    eol          go to state 10


State 1

   14 eol: $end •

    $default  reduce using rule 14 (eol)


State 2

   11 number: T_INT •

    $default  reduce using rule 11 (number)


State 3

   12 number: T_FLOAT •

    $default  reduce using rule 12 (number)


State 4

   10 expression: T_LEFT • expression T_RIGHT

    T_INT    shift, and go to state 2
    T_FLOAT  shift, and go to state 3
    T_LEFT   shift, and go to state 4

    expression  go to state 11
    number      go to state 9


State 5

   13 eol: T_NEWLINE •

    $default  reduce using rule 13 (eol)


State 6

    0 $accept: calculation • $end
    2 calculation: calculation • line

    $end       shift, and go to state 12
    T_INT      shift, and go to state 2
    T_FLOAT    shift, and go to state 3
    T_LEFT     shift, and go to state 4
    T_NEWLINE  shift, and go to state 5

    line        go to state 13
    expression  go to state 8
    number      go to state 9
    eol         go to state 10


State 7

    1 calculation: line •

    $default  reduce using rule 1 (calculation)


State 8

    4 line: expression • eol
    6 expression: expression • T_PLUS expression
    7           | expression • T_MINUS expression
    8           | expression • T_MULTIPLY expression
    9           | expression • T_DIVIDE expression

    $end        shift, and go to state 1
    T_PLUS      shift, and go to state 14
    T_MINUS     shift, and go to state 15
    T_MULTIPLY  shift, and go to state 16
    T_DIVIDE    shift, and go to state 17
    T_NEWLINE   shift, and go to state 5

    eol  go to state 18


State 9

    5 expression: number •

    $default  reduce using rule 5 (expression)


State 10

    3 line: eol •

    $default  reduce using rule 3 (line)


State 11

    6 expression: expression • T_PLUS expression
    7           | expression • T_MINUS expression
    8           | expression • T_MULTIPLY expression
    9           | expression • T_DIVIDE expression
   10           | T_LEFT expression • T_RIGHT

    T_PLUS      shift, and go to state 14
    T_MINUS     shift, and go to state 15
    T_MULTIPLY  shift, and go to state 16
    T_DIVIDE    shift, and go to state 17
    T_RIGHT     shift, and go to state 19


State 12

    0 $accept: calculation $end •
   14 eol: $end •

    $default  reduce using rule 14 (eol)


State 13

    2 calculation: calculation line •

    $default  reduce using rule 2 (calculation)


State 14

    6 expression: expression T_PLUS • expression

    T_INT    shift, and go to state 2
    T_FLOAT  shift, and go to state 3
    T_LEFT   shift, and go to state 4

    expression  go to state 20
    number      go to state 9


State 15

    7 expression: expression T_MINUS • expression

    T_INT    shift, and go to state 2
    T_FLOAT  shift, and go to state 3
    T_LEFT   shift, and go to state 4

    expression  go to state 21
    number      go to state 9


State 16

    8 expression: expression T_MULTIPLY • expression

    T_INT    shift, and go to state 2
    T_FLOAT  shift, and go to state 3
    T_LEFT   shift, and go to state 4

    expression  go to state 22
    number      go to state 9


State 17

    9 expression: expression T_DIVIDE • expression

    T_INT    shift, and go to state 2
    T_FLOAT  shift, and go to state 3
    T_LEFT   shift, and go to state 4

    expression  go to state 23
    number      go to state 9


State 18

    4 line: expression eol •

    $default  reduce using rule 4 (line)


State 19

   10 expression: T_LEFT expression T_RIGHT •

    $default  reduce using rule 10 (expression)


State 20

    6 expression: expression • T_PLUS expression
    6           | expression T_PLUS expression •
    7           | expression • T_MINUS expression
    8           | expression • T_MULTIPLY expression
    9           | expression • T_DIVIDE expression

    T_MULTIPLY  shift, and go to state 16
    T_DIVIDE    shift, and go to state 17

    $default  reduce using rule 6 (expression)


State 21

    6 expression: expression • T_PLUS expression
    7           | expression • T_MINUS expression
    7           | expression T_MINUS expression •
    8           | expression • T_MULTIPLY expression
    9           | expression • T_DIVIDE expression

    T_MULTIPLY  shift, and go to state 16
    T_DIVIDE    shift, and go to state 17

    $default  reduce using rule 7 (expression)


State 22

    6 expression: expression • T_PLUS expression
    7           | expression • T_MINUS expression
    8           | expression • T_MULTIPLY expression
    8           | expression T_MULTIPLY expression •
    9           | expression • T_DIVIDE expression

    $default  reduce using rule 8 (expression)


State 23

    6 expression: expression • T_PLUS expression
    7           | expression • T_MINUS expression
    8           | expression • T_MULTIPLY expression
    9           | expression • T_DIVIDE expression
    9           | expression T_DIVIDE expression •

    $default  reduce using rule 9 (expression)
